# ember-markets

./: Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json
programs/binary-outcome-tokens/: Cargo.toml
programs/binary-outcome-tokens/src/: consts.rs  error_codes.rs  lib.rs  state.rs
programs/binary-outcome-tokens/src/instructions/: initialize_condition.rs  merge_ticket.rs  mint_ticket.rs  mod.rs  redeem_payout.rs  redeem_ticket.rs  resolve_condition.rs  split_ticket.rs
programs/ember-markets/: Cargo.toml
programs/ember-markets/src/: consts.rs  ember_errors.rs  lib.rs  utils.rs
programs/ember-markets/src/instructions/: admin.rs  mod.rs  orderbook.rs  user.rs
programs/ember-markets/src/state/: BOT.rs  mod.rs  orderbook.rs  side.rs  state.rs
tests/: ember-markets.ts
